assignment3/y.output
Terminals unused in grammar

   token


Grammar

    0 $accept: Program $end

    1 Program: Functions

    2 Functions: %empty
    3          | Function Functions

    4 $@1: %empty

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY
    6         | error

    7 Declaration1: %empty
    8             | Declaration SEMICOLON Declaration1

    9 Declaration: Identifier COLON Type
   10            | error

   11 Statement1: Statement SEMICOLON Statement1
   12           | Statement SEMICOLON

   13 Identifier: identifier
   14           | identifier COMMA Identifier

   15 identifier: IDENT

   16 Type: INTEGER
   17     | ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   18 Statement: Var1 ASSIGN Expression
   19          | IF-STMT
   20          | WHILE Bool-Expr BEGINLOOP Statement1 ENDLOOP
   21          | DO BEGINLOOP Statement1 ENDLOOP WHILE Bool-Expr

   22 $@2: %empty

   23 Statement: READ $@2 Var1

   24 $@3: %empty

   25 Statement: WRITE $@3 Var1
   26          | CONTINUE
   27          | RETURN Expression
   28          | error

   29 IF-STMT: IF Bool-Expr THEN Statement1 ENDIF
   30        | IF Bool-Expr THEN Statement1 ELSE Statement1 ENDIF

   31 Var1: Var COMMA Var1
   32     | Var

   33 Bool-Expr: Relation_And_Expr

   34 $@4: %empty

   35 Bool-Expr: Relation_And_Expr OR $@4 Bool-Expr

   36 Relation_And_Expr: Relation_Exprs

   37 $@5: %empty

   38 Relation_And_Expr: Relation_Exprs AND $@5 Relation_And_Expr

   39 $@6: %empty

   40 Relation_Exprs: NOT $@6 Relation_Expr
   41               | Relation_Expr

   42 Relation_Expr: Expression Comp Expression
   43              | TRUE
   44              | FALSE
   45              | L_PAREN Bool-Expr R_PAREN

   46 Comp: EQ
   47     | NEQ
   48     | LT
   49     | GT
   50     | LTE
   51     | GTE

   52 $@7: %empty

   53 Expression: Multiplicative-Expr ADD $@7 Expression

   54 $@8: %empty

   55 Expression: Multiplicative-Expr SUB $@8 Expression
   56           | Multiplicative-Expr

   57 $@9: %empty

   58 Multiplicative-Expr: Term MULT $@9 Term

   59 $@10: %empty

   60 Multiplicative-Expr: Term DIV $@10 Term

   61 $@11: %empty

   62 Multiplicative-Expr: Term MOD $@11 Term
   63                    | Term

   64 Term: Normal
   65     | SUB Var
   66     | SUB NUMBER
   67     | SUB L_PAREN Expression R_PAREN
   68     | identifier L_PAREN Expression1 R_PAREN

   69 Normal: Var
   70       | NUMBER
   71       | L_PAREN Expression1 R_PAREN

   72 Expression1: Expression COMMA Expression1
   73            | Expression
   74            | %empty

   75 Var: identifier
   76    | identifier L_SQUARE_BRACKET Expression R_SQUARE_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256) 6 10 28
FUNCTION (258) 5
BEGIN_PARAMS (259) 5
END_PARAMS (260) 5
BEGIN_BODY (261) 5
token (262)
END_BODY (263) 5
BEGIN_LOCALS (264) 5
END_LOCALS (265) 5
INTEGER (266) 16 17
ARRAY (267) 17
OF (268) 17
IF (269) 29 30
THEN (270) 29 30
ENDIF (271) 29 30
ELSE (272) 30
WHILE (273) 20 21
DO (274) 21
BEGINLOOP (275) 20 21
ENDLOOP (276) 20 21
CONTINUE (277) 26
READ (278) 23
WRITE (279) 25
TRUE (280) 43
FALSE (281) 44
AND (282) 38
OR (283) 35
NOT (284) 40
SEMICOLON (285) 5 8 11 12
COLON (286) 9
COMMA (287) 14 31 72
L_PAREN (288) 45 67 68 71
R_PAREN (289) 45 67 68 71
L_SQUARE_BRACKET (290) 17 76
R_SQUARE_BRACKET (291) 17 76
ASSIGN (292) 18
RETURN (293) 27
NUMBER (294) 17 66 70
IDENT (295) 5 15
MULT (296) 58
DIV (297) 60
MOD (298) 62
ADD (299) 53
SUB (300) 55 65 66 67
LT (301) 48
LTE (302) 50
GT (303) 49
GTE (304) 51
EQ (305) 46
NEQ (306) 47


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
Functions (54)
    on left: 2 3, on right: 1 3
Function (55)
    on left: 5 6, on right: 3
$@1 (56)
    on left: 4, on right: 5
Declaration1 (57)
    on left: 7 8, on right: 5 8
Declaration (58)
    on left: 9 10, on right: 8
Statement1 (59)
    on left: 11 12, on right: 5 11 20 21 29 30
Identifier (60)
    on left: 13 14, on right: 9 14
identifier (61)
    on left: 15, on right: 13 14 68 75 76
Type (62)
    on left: 16 17, on right: 9
Statement (63)
    on left: 18 19 20 21 23 25 26 27 28, on right: 11 12
$@2 (64)
    on left: 22, on right: 23
$@3 (65)
    on left: 24, on right: 25
IF-STMT (66)
    on left: 29 30, on right: 19
Var1 (67)
    on left: 31 32, on right: 18 23 25 31
Bool-Expr (68)
    on left: 33 35, on right: 20 21 29 30 35 45
$@4 (69)
    on left: 34, on right: 35
Relation_And_Expr (70)
    on left: 36 38, on right: 33 35 38
$@5 (71)
    on left: 37, on right: 38
Relation_Exprs (72)
    on left: 40 41, on right: 36 38
$@6 (73)
    on left: 39, on right: 40
Relation_Expr (74)
    on left: 42 43 44 45, on right: 40 41
Comp (75)
    on left: 46 47 48 49 50 51, on right: 42
Expression (76)
    on left: 53 55 56, on right: 18 27 42 53 55 67 72 73 76
$@7 (77)
    on left: 52, on right: 53
$@8 (78)
    on left: 54, on right: 55
Multiplicative-Expr (79)
    on left: 58 60 62 63, on right: 53 55 56
$@9 (80)
    on left: 57, on right: 58
$@10 (81)
    on left: 59, on right: 60
$@11 (82)
    on left: 61, on right: 62
Term (83)
    on left: 64 65 66 67 68, on right: 58 60 62 63
Normal (84)
    on left: 69 70 71, on right: 64
Expression1 (85)
    on left: 72 73 74, on right: 68 71 72
Var (86)
    on left: 75 76, on right: 31 32 65 69


State 0

    0 $accept: . Program $end

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $end  reduce using rule 2 (Functions)

    Program    go to state 3
    Functions  go to state 4
    Function   go to state 5


State 1

    6 Function: error .

    $default  reduce using rule 6 (Function)


State 2

    5 Function: FUNCTION . IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    IDENT  shift, and go to state 6


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 7


State 4

    1 Program: Functions .

    $default  reduce using rule 1 (Program)


State 5

    3 Functions: Function . Functions

    error     shift, and go to state 1
    FUNCTION  shift, and go to state 2

    $end  reduce using rule 2 (Functions)

    Functions  go to state 8
    Function   go to state 5


State 6

    5 Function: FUNCTION IDENT . $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 7

    0 $accept: Program $end .

    $default  accept


State 8

    3 Functions: Function Functions .

    $default  reduce using rule 3 (Functions)


State 9

    5 Function: FUNCTION IDENT $@1 . SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    SEMICOLON  shift, and go to state 10


State 10

    5 Function: FUNCTION IDENT $@1 SEMICOLON . BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    BEGIN_PARAMS  shift, and go to state 11


State 11

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS . Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    error  shift, and go to state 12
    IDENT  shift, and go to state 13

    END_PARAMS  reduce using rule 7 (Declaration1)

    Declaration1  go to state 14
    Declaration   go to state 15
    Identifier    go to state 16
    identifier    go to state 17


State 12

   10 Declaration: error .

    $default  reduce using rule 10 (Declaration)


State 13

   15 identifier: IDENT .

    $default  reduce using rule 15 (identifier)


State 14

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 . END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    END_PARAMS  shift, and go to state 18


State 15

    8 Declaration1: Declaration . SEMICOLON Declaration1

    SEMICOLON  shift, and go to state 19


State 16

    9 Declaration: Identifier . COLON Type

    COLON  shift, and go to state 20


State 17

   13 Identifier: identifier .
   14           | identifier . COMMA Identifier

    COMMA  shift, and go to state 21

    $default  reduce using rule 13 (Identifier)


State 18

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS . BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    BEGIN_LOCALS  shift, and go to state 22


State 19

    8 Declaration1: Declaration SEMICOLON . Declaration1

    error  shift, and go to state 12
    IDENT  shift, and go to state 13

    END_PARAMS  reduce using rule 7 (Declaration1)
    END_LOCALS  reduce using rule 7 (Declaration1)

    Declaration1  go to state 23
    Declaration   go to state 15
    Identifier    go to state 16
    identifier    go to state 17


State 20

    9 Declaration: Identifier COLON . Type

    INTEGER  shift, and go to state 24
    ARRAY    shift, and go to state 25

    Type  go to state 26


State 21

   14 Identifier: identifier COMMA . Identifier

    IDENT  shift, and go to state 13

    Identifier  go to state 27
    identifier  go to state 17


State 22

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS . Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY

    error  shift, and go to state 12
    IDENT  shift, and go to state 13

    END_LOCALS  reduce using rule 7 (Declaration1)

    Declaration1  go to state 28
    Declaration   go to state 15
    Identifier    go to state 16
    identifier    go to state 17


State 23

    8 Declaration1: Declaration SEMICOLON Declaration1 .

    $default  reduce using rule 8 (Declaration1)


State 24

   16 Type: INTEGER .

    $default  reduce using rule 16 (Type)


State 25

   17 Type: ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 29


State 26

    9 Declaration: Identifier COLON Type .

    $default  reduce using rule 9 (Declaration)


State 27

   14 Identifier: identifier COMMA Identifier .

    $default  reduce using rule 14 (Identifier)


State 28

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 . END_LOCALS BEGIN_BODY Statement1 END_BODY

    END_LOCALS  shift, and go to state 30


State 29

   17 Type: ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 31


State 30

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS . BEGIN_BODY Statement1 END_BODY

    BEGIN_BODY  shift, and go to state 32


State 31

   17 Type: ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 33


State 32

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY . Statement1 END_BODY

    error     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 13

    Statement1  go to state 42
    identifier  go to state 43
    Statement   go to state 44
    IF-STMT     go to state 45
    Var1        go to state 46
    Var         go to state 47


State 33

   17 Type: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 48


State 34

   28 Statement: error .

    $default  reduce using rule 28 (Statement)


State 35

   29 IF-STMT: IF . Bool-Expr THEN Statement1 ENDIF
   30        | IF . Bool-Expr THEN Statement1 ELSE Statement1 ENDIF

    TRUE     shift, and go to state 49
    FALSE    shift, and go to state 50
    NOT      shift, and go to state 51
    L_PAREN  shift, and go to state 52
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Bool-Expr            go to state 56
    Relation_And_Expr    go to state 57
    Relation_Exprs       go to state 58
    Relation_Expr        go to state 59
    Expression           go to state 60
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 36

   20 Statement: WHILE . Bool-Expr BEGINLOOP Statement1 ENDLOOP

    TRUE     shift, and go to state 49
    FALSE    shift, and go to state 50
    NOT      shift, and go to state 51
    L_PAREN  shift, and go to state 52
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Bool-Expr            go to state 65
    Relation_And_Expr    go to state 57
    Relation_Exprs       go to state 58
    Relation_Expr        go to state 59
    Expression           go to state 60
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 37

   21 Statement: DO . BEGINLOOP Statement1 ENDLOOP WHILE Bool-Expr

    BEGINLOOP  shift, and go to state 66


State 38

   26 Statement: CONTINUE .

    $default  reduce using rule 26 (Statement)


State 39

   23 Statement: READ . $@2 Var1

    $default  reduce using rule 22 ($@2)

    $@2  go to state 67


State 40

   25 Statement: WRITE . $@3 Var1

    $default  reduce using rule 24 ($@3)

    $@3  go to state 68


State 41

   27 Statement: RETURN . Expression

    L_PAREN  shift, and go to state 69
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Expression           go to state 70
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 42

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 . END_BODY

    END_BODY  shift, and go to state 71


State 43

   75 Var: identifier .
   76    | identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 72

    $default  reduce using rule 75 (Var)


State 44

   11 Statement1: Statement . SEMICOLON Statement1
   12           | Statement . SEMICOLON

    SEMICOLON  shift, and go to state 73


State 45

   19 Statement: IF-STMT .

    $default  reduce using rule 19 (Statement)


State 46

   18 Statement: Var1 . ASSIGN Expression

    ASSIGN  shift, and go to state 74


State 47

   31 Var1: Var . COMMA Var1
   32     | Var .

    COMMA  shift, and go to state 75

    $default  reduce using rule 32 (Var1)


State 48

   17 Type: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 76


State 49

   43 Relation_Expr: TRUE .

    $default  reduce using rule 43 (Relation_Expr)


State 50

   44 Relation_Expr: FALSE .

    $default  reduce using rule 44 (Relation_Expr)


State 51

   40 Relation_Exprs: NOT . $@6 Relation_Expr

    $default  reduce using rule 39 ($@6)

    $@6  go to state 77


State 52

   45 Relation_Expr: L_PAREN . Bool-Expr R_PAREN
   71 Normal: L_PAREN . Expression1 R_PAREN

    TRUE     shift, and go to state 49
    FALSE    shift, and go to state 50
    NOT      shift, and go to state 51
    L_PAREN  shift, and go to state 52
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    $default  reduce using rule 74 (Expression1)

    identifier           go to state 55
    Bool-Expr            go to state 78
    Relation_And_Expr    go to state 57
    Relation_Exprs       go to state 58
    Relation_Expr        go to state 59
    Expression           go to state 79
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Expression1          go to state 80
    Var                  go to state 64


State 53

   70 Normal: NUMBER .

    $default  reduce using rule 70 (Normal)


State 54

   65 Term: SUB . Var
   66     | SUB . NUMBER
   67     | SUB . L_PAREN Expression R_PAREN

    L_PAREN  shift, and go to state 81
    NUMBER   shift, and go to state 82
    IDENT    shift, and go to state 13

    identifier  go to state 43
    Var         go to state 83


State 55

   68 Term: identifier . L_PAREN Expression1 R_PAREN
   75 Var: identifier .
   76    | identifier . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_PAREN           shift, and go to state 84
    L_SQUARE_BRACKET  shift, and go to state 72

    $default  reduce using rule 75 (Var)


State 56

   29 IF-STMT: IF Bool-Expr . THEN Statement1 ENDIF
   30        | IF Bool-Expr . THEN Statement1 ELSE Statement1 ENDIF

    THEN  shift, and go to state 85


State 57

   33 Bool-Expr: Relation_And_Expr .
   35          | Relation_And_Expr . OR $@4 Bool-Expr

    OR  shift, and go to state 86

    $default  reduce using rule 33 (Bool-Expr)


State 58

   36 Relation_And_Expr: Relation_Exprs .
   38                  | Relation_Exprs . AND $@5 Relation_And_Expr

    AND  shift, and go to state 87

    $default  reduce using rule 36 (Relation_And_Expr)


State 59

   41 Relation_Exprs: Relation_Expr .

    $default  reduce using rule 41 (Relation_Exprs)


State 60

   42 Relation_Expr: Expression . Comp Expression

    LT   shift, and go to state 88
    LTE  shift, and go to state 89
    GT   shift, and go to state 90
    GTE  shift, and go to state 91
    EQ   shift, and go to state 92
    NEQ  shift, and go to state 93

    Comp  go to state 94


State 61

   53 Expression: Multiplicative-Expr . ADD $@7 Expression
   55           | Multiplicative-Expr . SUB $@8 Expression
   56           | Multiplicative-Expr .

    ADD  shift, and go to state 95
    SUB  shift, and go to state 96

    $default  reduce using rule 56 (Expression)


State 62

   58 Multiplicative-Expr: Term . MULT $@9 Term
   60                    | Term . DIV $@10 Term
   62                    | Term . MOD $@11 Term
   63                    | Term .

    MULT  shift, and go to state 97
    DIV   shift, and go to state 98
    MOD   shift, and go to state 99

    $default  reduce using rule 63 (Multiplicative-Expr)


State 63

   64 Term: Normal .

    $default  reduce using rule 64 (Term)


State 64

   69 Normal: Var .

    $default  reduce using rule 69 (Normal)


State 65

   20 Statement: WHILE Bool-Expr . BEGINLOOP Statement1 ENDLOOP

    BEGINLOOP  shift, and go to state 100


State 66

   21 Statement: DO BEGINLOOP . Statement1 ENDLOOP WHILE Bool-Expr

    error     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 13

    Statement1  go to state 101
    identifier  go to state 43
    Statement   go to state 44
    IF-STMT     go to state 45
    Var1        go to state 46
    Var         go to state 47


State 67

   23 Statement: READ $@2 . Var1

    IDENT  shift, and go to state 13

    identifier  go to state 43
    Var1        go to state 102
    Var         go to state 47


State 68

   25 Statement: WRITE $@3 . Var1

    IDENT  shift, and go to state 13

    identifier  go to state 43
    Var1        go to state 103
    Var         go to state 47


State 69

   71 Normal: L_PAREN . Expression1 R_PAREN

    L_PAREN  shift, and go to state 69
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    $default  reduce using rule 74 (Expression1)

    identifier           go to state 55
    Expression           go to state 104
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Expression1          go to state 80
    Var                  go to state 64


State 70

   27 Statement: RETURN Expression .

    $default  reduce using rule 27 (Statement)


State 71

    5 Function: FUNCTION IDENT $@1 SEMICOLON BEGIN_PARAMS Declaration1 END_PARAMS BEGIN_LOCALS Declaration1 END_LOCALS BEGIN_BODY Statement1 END_BODY .

    $default  reduce using rule 5 (Function)


State 72

   76 Var: identifier L_SQUARE_BRACKET . Expression R_SQUARE_BRACKET

    L_PAREN  shift, and go to state 69
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Expression           go to state 105
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 73

   11 Statement1: Statement SEMICOLON . Statement1
   12           | Statement SEMICOLON .

    error     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41
    IDENT     shift, and go to state 13

    END_BODY  reduce using rule 12 (Statement1)
    ENDIF     reduce using rule 12 (Statement1)
    ELSE      reduce using rule 12 (Statement1)
    ENDLOOP   reduce using rule 12 (Statement1)

    Statement1  go to state 106
    identifier  go to state 43
    Statement   go to state 44
    IF-STMT     go to state 45
    Var1        go to state 46
    Var         go to state 47


State 74

   18 Statement: Var1 ASSIGN . Expression

    L_PAREN  shift, and go to state 69
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Expression           go to state 107
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 75

   31 Var1: Var COMMA . Var1

    IDENT  shift, and go to state 13

    identifier  go to state 43
    Var1        go to state 108
    Var         go to state 47


State 76

   17 Type: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER .

    $default  reduce using rule 17 (Type)


State 77

   40 Relation_Exprs: NOT $@6 . Relation_Expr

    TRUE     shift, and go to state 49
    FALSE    shift, and go to state 50
    L_PAREN  shift, and go to state 52
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Relation_Expr        go to state 109
    Expression           go to state 60
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 78

   45 Relation_Expr: L_PAREN Bool-Expr . R_PAREN

    R_PAREN  shift, and go to state 110


State 79

   42 Relation_Expr: Expression . Comp Expression
   72 Expression1: Expression . COMMA Expression1
   73            | Expression .

    COMMA  shift, and go to state 111
    LT     shift, and go to state 88
    LTE    shift, and go to state 89
    GT     shift, and go to state 90
    GTE    shift, and go to state 91
    EQ     shift, and go to state 92
    NEQ    shift, and go to state 93

    $default  reduce using rule 73 (Expression1)

    Comp  go to state 94


State 80

   71 Normal: L_PAREN Expression1 . R_PAREN

    R_PAREN  shift, and go to state 112


State 81

   67 Term: SUB L_PAREN . Expression R_PAREN

    L_PAREN  shift, and go to state 69
    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 13
    SUB      shift, and go to state 54

    identifier           go to state 55
    Expression           go to state 113
    Multiplicative-Expr  go to state 61
    Term                 go to state 62
    Normal               go to state 63
    Var                  go to state 64


State 82

   66 Term: SUB NUMBER .

    $default  reduce using rule 66 (Term)


State 83

   65 Term: SUB Var .

    $default  reduce using rule 65 (Term)


State 84
